<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">terminal</string>
    <string name="default_notification_channel_id">terminal</string>

    <string name="setting">설정</string>
    <string name="notice">공지사항</string>
    <string name="help">도움말</string>
    <string name="contact">문의하기</string>
    <string name="terms">이용약관</string>
    <string name="policy">개인정보 취급방침</string>
    <string name="app_version">앱 버전</string>
    <string name="version_text">0.0.0</string>
    <string name="push_alarm">푸쉬 알림 사용</string>

    <string name="intro_sign_up">시작하기</string>
    <string name="intro_sign_in">로그인</string>
    <string name="intro_explain">혼자하는 개발 공부 힘들었다면?\n개발자들이 개발자를 알고 만든\n‘터미널’ 에서 스터디를 시작해보세요.</string>
    <string name="search_place">장소로 검색</string>
    <string name="search_hot_keyword">핫 등록 키워드</string>


    <string name="sign_next">다음</string>

    <string name="sign_up_email_explain">이메일을\n입력해 주세요.</string>
    <string name="sign_up_email_hint">abc1234@terminal.com</string>

    <string name="sign_up_nickname_explain">가입을 위해\n닉네임을 입력해 주세요.</string>
    <string name="sign_up_nickname_hint">닉네임</string>

    <string name="sign_up_password_explain">사용하실 비밀번호\n입력해 주세요.</string>
    <string name="sign_up_password_hint">비밀번호</string>
    <string name="sign_up_password_helper">6자 이상 입력해 주세요.</string>
    <string name="sign_up_password_helper2">20자 이하로 입력해 주세요.</string>


    <string name="sign_in_email_explain">이메일을\n입력해 주세요.</string>
    <string name="sign_in_email_hint">email@inputinput.com</string>

    <string name="sign_in_password_explain">로그인을 위해\n계정의 비밀번호를\n입력해 주세요.</string>
    <string name="sign_in_password_hint">비밀번호</string>
    <string name="sign_in_password_helper">6자 이상 입력해 주세요.</string>


    <string name="my_study_explain1">내 스터디</string>
    <string name="edit_study">스터디 편집</string>
    <string name="leave_study">스터디 나가기</string>
    <string name="delete_study">스터디 삭제</string>


    <string name="profile_title">프로필</string>
    <string name="profile_edit_title">프로필 수정</string>
    <string name="share">공유하기</string>
    <string name="done">완료</string>

    <string name="pined_true">필독</string>
    <string name="pined_false">공지</string>

    <string name="study">스터디</string>
    <string name="recency">최신</string>
    <string name="location">지역</string>

    <string name="mystudy_chat">새 채팅</string>
    <string name="mystudy_notice">새 공지</string>
    <string name="mystudy_member">새 맴버</string>

    <string name="search_hint">스터디명 분류(키워드) 등</string>
    <string name="address_hint">상세주소를 입력하세요 (건물명, 동/호수 등)</string>
    <string name="set_location">선택한 위치로 설정</string>

    <string name="empty_title">제목을 작성하세요</string>
    <string name="empty_contents">내용을 작성하세요</string>
    <string name="empty_introduce">소개를 작성하세요</string>
    <string name="empty_progress">진행을 작성하세요</string>
    <string name="empty_place">장소를 선택하세요</string>
    <string name="empty_time">시간을 작성하세요</string>
    <string name="register_study">스터디가 등록되었습니다</string>
    <string name="register_notice">공지사항이 등록되었습니다</string>
    <string name="modify_notice">공지사항이 수정되었습니다</string>
    <string name="delete_notice">공지사항이 삭제되었습니다</string>
    <string name="length_title">제목의 길이가 짧습니다</string>
    <string name="address_sns_notion">Notion URL이 정확하지 않습니다</string>
    <string name="address_sns_evernote">EverNote URL이 정확하지 않습니다</string>
    <string name="success">임시 성공</string>

    <string name="create_study_title_hint">스터디 이름을 입력하세요</string>


    <string name="notice_create">공지사항 작성</string>
    <string name="notice_modify">공지사항 수정</string>
    <string name="notice_detail">공지사항</string>

    <string name="next">다음</string>

    <string name="join_study">스터디 참여하기</string>
    <string name="member_list">구성원</string>
    <string name="study_proceed">스터디 진행</string>
    <string name="study_introduce">스터디 소개</string>
    <string name="time">시간</string>
    <string name="place">장소</string>

    <string name="edit">수정하기</string>
    <string name="email">Email</string>
    <string name="area">활동 지역</string>
    <string name="sns">SNS</string>
    <string name="project_add_button">+ 프로젝트 추가</string>
    <string name="empty_career">아직 추가한 경력이 없습니다.</string>
    <string name="empty_project">아직 추가한 프로젝트가 없습니다.</string>
    <string name="empty_sns">아직 추가한 SNS가 없습니다.</string>
    <string name="empty_area">아직 추가한 활동지역이 없습니다.</string>
    <string name="contents">내용</string>
    <string name="title">타이틀</string>
    <string name="read_storage_permission_title">사진 선택</string>
    <string name="read_storage_permission_contents">사진 접근 권한에 동의해주세요.</string>
    <string name="profile_name_hint">이름을 입력해 주세요.</string>
    <string name="profile_desc_hint">간단한 자기소개를 입력해 주세요.</string>
    <string name="title_edit_profile_header">사진 및 정보 수정</string>
    <string name="success_modify">수정 완료</string>
    <string name="title_edit_career">경력 수정</string>
    <string name="title_edit_sns">SNS 수정</string>
    <string name="title_edit_email">이메일 수정</string>
    <string name="title_edit_area">활동 지역 수정</string>
    <string name="edit_area_step1_hint">도 / 시</string>
    <string name="edit_area_step2_hint">시 / 군 / 구</string>
    <string name="title_edit_project">프로젝트 수정</string>

    <string name="apply_title">스터디 신청하기</string>
    <string name="apply_content">가입인사를 작성해보세요</string>
    <string name="cancel">취소</string>
    <string name="apply">신청</string>
    <string name="toast_empty_introduce">가입인사를 작성해 주세요.</string>
    <string name="apply_study_list">스터디 신청 목록</string>
    <string name="title_apply_my_study">신청한 스터디</string>
    <string name="title_apply_study">신청자 목록</string>

    <string name="empty_place_detail">상세주소를 입력하세요</string>
    <string name="complete">완료</string>
    <string name="leave">나가기</string>

    <string name="apply_cancel">신청 취소</string>
    <string name="yes">네</string>
    <string name="no">아니요</string>
    <string name="dialog_apply_cancel_title">스터디 신청을 취소 하시겠어요?</string>
    <string name="pass_permission">스터디 장을 위임하셔야 합니다</string>
    <string name="host_delegate">스터디 장 위임하기</string>
    <string name="success_delegate">위임이 완료되었습니다</string>

    <string name="apply_modify_title">가입 인사를 수정해보세요</string>
    <string name="reject">거절</string>
    <string name="accept">수락</string>
    <string name="modify_study">스터디 수정하기</string>

    <string name="select_category">카테고리 선택</string>
    <string name="must_read">필독</string>
    <string name="normal">일반</string>
    <string name="ttl">제목</string>
    <string name="confirm">확인</string>
    <string name="to_modify">수정하기</string>
    <string name="to_delete">삭제하기</string>

    <string name="dialog_notice_delete_title">공지사항을 삭제하시겠습니까?</string>
    <string name="dialog_notice_modify_title">공지사항을 수정하시겠습니까?</string>

    <string name="please_sign_up_study">스터디 가입을 해주세요</string>

    <string name="dialog_leave_study_title">스터디를 나가시겠어요?</string>
    <string name="dialog_delete_study_title">스터디를 삭제하시겠어요?</string>
    <string name="dialog_delegate_leader_title">방장을 위임하시겠어요?</string>
    <string name="dialog_logout_title">로그아웃 하시겠어요?</string>
    <string name="alert">알림</string>

    <string name="check">확인하기</string>
    <string name="toast_study_deleted">%s 스터디가 삭제되었습니다.</string>
    <string name="toast_study_rejected">%s 스터디 입장이 거절되었습니다.</string>

    <string name="sns_notion_input_hint">Notion URL</string>
    <string name="sns_notion_input_title">Notion</string>
    <string name="sns_ever_note_input_hint">EverNote URL</string>
    <string name="sns_ever_note_input_title">EverNote</string>
    <string name="sns_web_input_hint">URL (blog etc)</string>
    <string name="sns_web_input_title">Web</string>

    <string name="e_mail">이메일</string>
    <string name="account">계정</string>
    <string name="notification">알림</string>
    <string name="information">정보</string>
    <string name="logout">로그아웃</string>
    <string name="membership_withdrawal">회원탈퇴</string>
    <string name="dialog_certify_email">이메일 인증을 하시겠어요?</string>
    <string name="certify">인증</string>
    <string name="not_certify">미인증</string>

    <string name="delete_user_email_hint">이메일</string>
    <string name="delete_user_password_hint">비밀번호</string>
    <string name="delete_user_explain">회원님의 소중한 계정 보호를 위해, 터미널계정의 이메일과 비밀번호를 확인해 주세요.</string>
    <string name="dialog_delete_user_title">정말 회원탈퇴를 하시겠어요?</string>
    <string name="login_failed">로그인 실패</string>
    <string name="login_success">로그인 성공</string>
    <string name="not_found_email">존재하지 않는 이메일 입니다.</string>
    <string name="duplicated_email">중복된 이메일 입니다.</string>
    <string name="invalid_email">이메일 형식이 올바르지 않습니다.</string>
    <string name="invalid_nickname">닉네임을 2~7자로 입력해 주세요.</string>
    <string name="empty_alert">도착한 알림이 없습니다.</string>
    <string name="empty_my_study">참여중인 스터디가 없습니다.</string>
    <string name="empty_location">검색 결과가 없습니다.\n키워드를 입력해 주세요</string>
    <string name="empty_my_apply">신청한 스터디가 없습니다.</string>
    <string name="empty_apply">신청자가 없습니다.</string>
    <string name="empty_notice">작성된 공지사항이 없습니다.</string>
    <string name="empty_search_study">스터디 검색결과가 없습니다.</string>
    <string name="empty_study">아직 스터디가 없습니다.</string>
    <string name="empty_delegate_member">위임할 멤버가 존재하지 않습니다.</string>
    <string name="later">나중에</string>
    <string name="update">업데이트</string>
    <string name="dialog_update_title">업데이트 알림</string>
    <string name="dialog_update_sub_title">원활한 앱 사용을 위해 앱을 업데이트해 주세요</string>
    <string name="dialog_server_closed_title">서버 점검 알림</string>
    <string name="dialog_server_closed_sub_title">원활한 앱 사용을 위해 서버 점검 중 입니다.</string>
    <string name="close">닫기</string>
</resources>