<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.iron.espresso.R" />

        <variable
            name="viewModel"
            type="com.iron.espresso.presentation.home.mystudy.studydetail.ModifyStudyViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:orientation="vertical"
                android:paddingBottom="40dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/container_title_and_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="match_parent"
                        android:layout_height="169dp"
                        android:background="@color/gray7C7C7C"
                        android:alpha=".4"
                        android:scaleType="centerCrop"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/change_image"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:src="@drawable/ic_add_circle_outline_24"
                        app:layout_constraintBottom_toBottomOf="@id/image"
                        app:layout_constraintDimensionRatio="1"
                        app:layout_constraintEnd_toEndOf="@id/image"
                        app:layout_constraintStart_toStartOf="@id/image"
                        app:layout_constraintTop_toTopOf="@id/image"
                        app:layout_constraintWidth_percent=".15" />

                    <EditText
                        android:id="@+id/title_input_view"
                        android:layout_width="283dp"
                        android:layout_height="54dp"
                        android:background="@drawable/bg_input_view"
                        android:gravity="center"
                        android:singleLine="true"
                        android:hint="@string/create_study_title_hint"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toBottomOf="@id/image"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/image" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <TextView
                        android:id="@+id/introduce"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:fontFamily="@font/noto_sans_bold"
                        android:text="@string/study_introduce"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="카테고리" />

                    <EditText
                        android:id="@+id/introduce_input_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="15dp"
                        android:background="@drawable/bg_input_view"
                        android:gravity="top"
                        android:hint="@string/empty_introduce"
                        android:lines="6"
                        android:padding="10dp"
                        android:scrollbars="vertical"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/introduce" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/sns"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/noto_sans_bold"
                    android:text="@string/sns"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <include
                    android:id="@+id/notion_input_view"
                    layout="@layout/view_input_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    bind:hint="@{@string/sns_notion_input_hint}"
                    bind:icon="@{R.drawable.notion}"
                    bind:title="@{@string/sns_notion_input_title}"
                    bind:url="@{viewModel.notion}" />

                <include
                    android:id="@+id/evernote_input_view"
                    layout="@layout/view_input_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    bind:hint="@{@string/sns_ever_note_input_hint}"
                    bind:icon="@{R.drawable.ever_note}"
                    bind:title="@{@string/sns_ever_note_input_title}"
                    bind:url="@{viewModel.everNote}" />

                <include
                    android:id="@+id/web_input_view"
                    layout="@layout/view_input_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    bind:hint="@{@string/sns_web_input_hint}"
                    bind:icon="@{R.drawable.icon_web}"
                    bind:title="@{@string/sns_web_input_title}"
                    bind:url="@{viewModel.web}" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <TextView
                        android:id="@+id/proceed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:fontFamily="@font/noto_sans_bold"
                        android:text="@string/study_proceed"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/proceed_input_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="15dp"
                        android:background="@drawable/bg_input_view"
                        android:gravity="top"
                        android:hint="@string/empty_progress"
                        android:lines="6"
                        android:padding="10dp"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/proceed" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/place_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">


                    <TextView
                        android:id="@+id/place"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:fontFamily="@font/noto_sans_bold"
                        android:text="@string/place"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/place_detail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="15dp"
                        android:background="@drawable/bg_input_view"
                        android:padding="15dp"
                        android:text="@string/empty_place"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/place" />

                    <EditText
                        android:id="@+id/place_detail_input_View"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="15dp"
                        android:background="@drawable/bg_input_view"
                        android:hint="@string/empty_place_detail"
                        android:padding="15dp"
                        android:singleLine="true"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/place_detail" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:fontFamily="@font/noto_sans_bold"
                        android:text="@string/time"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/time_input_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="15dp"
                        android:background="@drawable/bg_input_view"
                        android:gravity="top"
                        android:hint="@string/empty_time"
                        android:padding="15dp"
                        android:singleLine="true"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/time" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp">


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_sign_up"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/bg_round"
                        android:backgroundTint="@color/colorPrimary"
                        android:fontFamily="@font/noto_sans_bold"
                        android:padding="10dp"
                        android:text="@string/complete"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>