<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="VM"
            type="com.iron.espresso.presentation.sign.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <ImageButton
            android:id="@+id/button_exit"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="@android:color/white"
            android:onClick="@{() -> VM.exitViewModel()}"
            android:src="@drawable/ic_clear"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent=".12" />

        <TextView
            android:id="@+id/button_next"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:onClick="@{() -> VM.verifyNicknameCheck(VM.signUpNickname)}"
            android:text="@string/sign_next"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent=".12" />


        <TextView
            android:id="@+id/explain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/sign_up_nickname_explain"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/nickname_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias=".7" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nickname_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            app:boxBackgroundMode="filled"
            app:boxStrokeColor="@color/colorCobaltBlue"
            app:boxStrokeWidth="0dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/colorCobaltBlue"
            app:hintEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/explain"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/sign_up_nickname_hint"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:text="@={VM.signUpNickname}"
                android:textCursorDrawable="@null"
                android:textSize="20sp"
                app:onEditorEnterAction="@{VM.checkNickname}" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>